tests/expectations/compiler/finalize/decrement_fail.out
Error [ETYC0372005]: Unknown function `test.aleo/decrement`
    --> compiler-test:10:9
     |
  10 |         decrement(amounts, addr, amount);
     |         ^^^^^^^^^
